add employee and table displays for employee and patient

--- a/public/dashboard-style.css
+++ b/public/dashboard-style.css
@@ -120,3 +120,12 @@ body {
 div label span.required {
   color: red;
 }
+/* label.error {
+  display: block;
+  position: absolute;
+  float: none;
+  color: red;
+  padding-left: .5em;
+  top: 50px;
+  bottom: 50px;
+} */
