--- a/public/health-form.css
+++ b/public/health-form.css
@@ -8,7 +8,13 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 /* N - - - A - - - V */
-
+/* body {
+    background: #eee;
+  } */
+  /* .my-5 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  } */
 nav{
     background-color: #4D9D7E;
     height: 70px;
@@ -19,6 +25,7 @@ i{
 .page-1{
     text-align: center;
 }
+ 
 .terms-text h4{
     padding-top: 24px;
     margin-top: 30px;
