--- a/public/health-form.css
+++ b/public/health-form.css
@@ -8,13 +8,17 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 /* N - - - A - - - V */
-/* body {
-    background: #eee;
-  } */
-  /* .my-5 {
-    margin-top: 30px;
-    margin-bottom: 30px;
-  } */
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  .page-3{
+    background-color: rgb(0, 0, 0);
+  }
+  
 nav{
     background-color: #4D9D7E;
     height: 70px;
@@ -78,16 +82,14 @@ i{
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
 }
-.container{
-    background-color: #EBEBEB;
-    /* margin: 10%; */
+
+.container {
+    background-color: #f31313;
     width: 90%;
     height: fit-content;
-    margin: 8% auto;
     border-radius: 20px;
     padding: 20px;
-    
-}
+  }
 .page-3 header{
     text-align: center;
     font-size: 20px;
