--- a/public/health-form.css
+++ b/public/health-form.css
@@ -8,17 +8,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 /* N - - - A - - - V */
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-  }
-  .page-3{
-    background-color: rgb(0, 0, 0);
-  }
+/* body {
+    background: #eee;
+  } */
   
+  .my-5 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
 nav{
     background-color: #4D9D7E;
     height: 70px;
@@ -82,19 +79,21 @@ i{
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
 }
-
-.container {
-    background-color: #f31313;
-    width: 90%;
+.container{
+    background-color: #EBEBEB;
+    /* margin: 10%; */
+    /* width: 90%; */
     height: fit-content;
+    margin: 8% auto;
     border-radius: 20px;
     padding: 20px;
-  }
-.page-3 header{
+    
+}
+
+.personalHeader{
     text-align: center;
     font-size: 20px;
     margin: 20px;
-  
     font-weight: bold;
 }
 .page-6 header{
@@ -105,13 +104,22 @@ i{
     font-weight: bold;
 }
 .input-field input{
-    height: 30px;
+    height: 35px;
     /* padding: 4px; */
     margin: 8px ;
     width: 95%;
     border: 1px solid #aaa;
 }
-
+.input-field textarea{
+    margin: 8px ;
+    width: 95%;
+    border: 1px solid #aaa;
+}
+.input-field select{
+    margin: 8px ;
+    width: 95%;
+    border: 1px solid #aaa;
+}
 .container .nextBtn{
     float: right;
 }
@@ -123,8 +131,10 @@ i{
     margin-bottom: 50px;
 }
 .input-field label{
-    margin-left: 10px;
+    margin-left: 10px;   
 }
+
+
 .input-field{
     padding-top: 10px;
     padding-bottom: 10px;
